Basic animation done

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <span></span>
     <span></span>
     <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
   </div>
   <main>
     <section>
